# Project-Basic

./: .gitignore  README.md  accounts.cpp  accounts.h  io.cpp  io.h  makefile  meson.build  task_list.cpp  tasks.h  todolist  todolist.cpp
.github/workflows/: codeql-analysis.yml
client/: makefile
client/includes/: Transmitter.h
client/src/Account/: Acccount_menu.cpp  Account_menu.h  Main.cpp  Main_account.cpp  Users_list.cpp  Users_list.h
client/src/Account_Communicator/: Communication_line.cpp  Communication_line_menu.cpp  Main.cpp  Main_comm_line.cpp
client/src/Chat/: Main.cpp  Main_chat.cpp  Message_list.h  Message_menu.cpp  Message_menu.h  Message_tuple.cpp
client/src/ContactBook/: Contacts.cpp  Contacts.h  Contacts_book_menu.cpp  Main.cpp
client/src/Exit/: Main.cpp
client/src/ProgramsHandler/: handler_ui.cpp  handler_ui.h  main.cpp  main_handler.cpp
client/src/Todolist/: Main.cpp  Main_todolist.cpp  Todolist_menu.cpp  Todolist_menu.h  task_list.cpp  task_list.h  tasks.cpp
client/src/Utilities/: List_crtp.h  Transmitter.cpp  io.cpp
client/src/loging/: loger.cpp
documentation/: accounts.man  cbook.man  chat.man  commline.man  handler.man  todolist.man
inc/: meson.build
inc/application_agregates/: control_agregate.h  file_agregates.h~  model_agregate.h  view_agregate.h
inc/input_output/: io.cpp  io.h  server_utilities.h
inc/server/: model_agregate.h~
includes/: #view_agregate.h#  .#view_agregate.h  control_agregate.h  file_agregates.h  generic_file.h  generic_file_s.h  generic_view.h  io.h  loger.h  model_agregate.h  server_utilities.h  view_agregate.h  view_agregates.h
includes/server/: control_agregate.h  generic_file.h
server/: makefile
src/: Account.cpp  Account.h  Communication_lines.cpp  Communication_lines.h  Menu_manager.cpp  Menu_manager.h  User.cpp  User.h  Users_list.cpp  Users_list.h  accounts.cpp  io.cpp  task_list.cpp  task_list.h  tasks.cpp  tasks.h  todolist.cpp
src/Account/: Acccount_menu.cpp  Account.cpp  Account.h  Account_menu.h  Account_view.cpp  Account_view.h  Communication_lines.h  Main.cpp  Main_account.cpp  User.cpp  User.h  Users_list.cpp  Users_list.h  account_control.cpp  account_control.h  account_model.cpp  account_model.h
src/Account_Communicator/: Comm_line.cpp  Comm_line_menu.h  Communication_line.cpp  Communication_line.h  Communication_line_menu.cpp  Communication_line_menu.h  Communication_lines.cpp  Communication_lines_verification.h  Main.cpp  Main_comm_line.cpp
src/Chat/: Main.cpp  Main_chat.cpp  Massge_list.cpp  Message_list.h  Message_menu.cpp  Message_menu.h  Message_tuple.cpp  Message_tuple.h
src/Client/: Client_main.cpp  meson.build
src/Client/main/: Client_main.cpp  client_runtime.cpp  client_runtime.hpp  client_runtime.hpp~
src/Commline/: Commline_control.cpp  Commline_control.h  Commline_model.cpp  Commline_model.h  Commline_view.cpp  Commline_view.h  Permission_table.cpp  Permission_table.h
src/ContactBook/: Contacts.cpp  Contacts.h  Contacts_book_menu.cpp  Contacts_book_menu.h  Contacts_list.cpp  Contacts_list.h  Contancts_book_menu.h  Main.cpp  Main_cbook.cpp
src/Exit/: Exitui.cpp  Exitui.h  Main.cpp
src/Interfaces/: Control_interface.h  View_interface.h
src/Operations/: delete_operations.cpp  delete_operations.h  get_operations.cpp  get_operations.h  post_operations.cpp  post_operations.h  put_operations.cpp  put_operations.h
src/ProgramsHandler/: handler_ui.cpp  main.cpp
src/Server/: account.cpp  account.h  account_control.cpp  account_control.h  account_model.cpp  account_model.h  file_agregates.h  generic_file.h  generic_view_file.h  meson.build  model_agregate.h  server_control.cpp  server_control.h  server_control_utilities.cpp  server_control_utilities.h  server_main.cpp
src/Server/account/: Account_view.cpp  account_control.cpp  account_control.h  account_model.cpp  account_model.h
src/Server/agregates/: control_agregate.cpp  control_agregate.cpp~  control_agregate.h  file_agregate.cpp  file_agregate.h  file_agregate.h~  file_agregates.h~  generic_file.h  model_agregate.cpp  model_agregate.h  view_agregate.cpp  view_agregate.cpp~  view_agregate.h
src/Server/commline/: Commline_control.cpp  Commline_control.h  Commline_model.cpp  Commline_model.h  Commline_view.cpp  Commline_view.h  Permission_table.h
src/Server/interfaces/: Control_interface.hpp  View_interface.hpp
src/Server/main/: server_control.cpp  server_control.h  server_control_utilities.cpp  server_control_utilities.h  server_main.cpp  server_runtime.cpp  server_runtime.cpp~  server_runtime.hpp  server_runtime.hpp~
src/Server/operations/: delete_operations.cpp  delete_operations.h  get_operations.cpp  get_operations.h  post_operations.cpp  post_operations.h  put_operations.cpp  put_operations.cpp~  put_operations.h
src/Server/todolist/: Task.cpp  Task.h  Task.h~  Todolist_control.cpp  Todolist_control.cpp~  Todolist_control.h  Todolist_model.cpp  Todolist_model.cpp~  Todolist_model.h  Todolist_view.cpp  Todolist_view.h  Todolist_view.h~
src/Tester/: Tester_main.cpp
src/Todolist/: #Todolist_model.cpp#  .#Todolist_model.cpp  Main.cpp  Main_todolist.cpp  Task.cpp  Task.h  Task_model.cpp  Todolist_control.cpp  Todolist_control.h  Todolist_menu.cpp  Todolist_menu.h  Todolist_model.cpp  Todolist_model.h  Todolist_view.cpp  Todolist_view.h  constants.h  task_list.cpp  task_list.h  tasks.cpp  tasks.h  todolist.cpp
src/Utilities/: #Makefile#  .#Makefile  File_management.h  List_crtp.h  List_functionalities.h  List_management.h  Transmitter.cpp  Transmitter.h  control_agregate.cpp  control_agregate.cpp~  extras.h  file_agregate.cpp  io.cpp  io.h  model_agregate.cpp  model_agregate.cpp~  server_utilities.cpp
src/loging/: loger.cpp  loger.h
users/: _logs.txt
users/slim/: slim_comms.txt  slim_logs.txt  slim_tasks.txt
